--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "image-size": "^0.8.3"
   }
 }
